--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0"
+    "eslint-plugin-react": "^7.13.0",
+    "reactotron-react-js": "^3.1.1",
+    "reactotron-redux": "^3.1.0"
   }
 }
